--- a/.github/workflows/run_sentiment.yml
+++ b/.github/workflows/run_sentiment.yml
@@ -1,33 +1,43 @@
-name: Daily Sentiment Bot
+name: Analisi Sentiment Giornaliera
 
 on:
   schedule:
-    - cron: "0 8 * * *"  # ogni giorno alle 8:00 UTC
-  workflow_dispatch:
+    # Esegue lo script ogni giorno alle 07:00 UTC (che corrispondono alle 09:00 CEST o 08:00 CET)
+    # Puoi personalizzare il cron job come preferisci.
+    # Formato CRON: minuto ora giorno_del_mese mese giorno_della_settimana
+    # Vedi https://crontab.guru per aiuto con la sintassi cron
+    - cron: '0 7 * * *'
+  workflow_dispatch: # Permette di eseguire il workflow manualmente dalla tab "Actions" di GitHub
 
 jobs:
-  run:
-    runs-on: ubuntu-latest
+  run-sentiment-analysis:
+    runs-on: ubuntu-latest # Usa l'ultima versione di Ubuntu disponibile sui runner di GitHub
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout del codice
+      uses: actions/checkout@v4 # Azione per fare il checkout del tuo codice
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
+    - name: Setup Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.12' # Specifica la versione di Python che usi (es. 3.8, 3.9, 3.10, 3.11)
 
-      - name: Install dependencies
-        run: |
-          pip install torch transformers praw requests
+    - name: Installazione dipendenze
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-      - name: Run script
-        env:
-          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
-          CHAT_ID: ${{ secrets.CHAT_ID }}
-          BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
-          REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
-          REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
-          REDDIT_USER_AGENT: ${{ secrets.REDDIT_USER_AGENT }}
-          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
-        run: python sentiment_bot3.py
+    - name: Esegui lo script di analisi
+      run: python nome_del_tuo_script.py # SOSTITUISCI con il nome effettivo del tuo file .py
+      env:
+        # Mappa i tuoi GitHub Secrets alle variabili d'ambiente
+        # Il nome a sinistra è quello che usi in os.environ.get()
+        # Il nome a destra (dopo secrets.) è il nome del secret in GitHub
+        BOT_TOKEN: ${{ secrets.BOT_TOKEN }} # Assicurati che questi nomi corrispondano!
+        CHAT_ID: ${{ secrets.CHAT_ID }}
+        BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
+        NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
+        REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
+        REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
+        REDDIT_USER_AGENT: ${{ secrets.REDDIT_USER_AGENT }}
+        # Aggiungi qui altre variabili d'ambiente se necessario
